--- a/content/cours/08-inference.Rmd
+++ b/content/cours/08-inference.Rmd
@@ -35,8 +35,8 @@ D'un point de vue fréquentiste, c'est l'estimateur qui a la plus petite varianc
 \begin{align*}
 \mathbb{E}_{\theta|\boldsymbol{y}}(\hat{\theta} - \theta)^2 & = \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P +\mu_P -\hat{\theta})^2\\
  & = \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P)^2 +\mathbb{E}_{\theta|\boldsymbol{y}}(\mu_P -\hat{\theta})^2\; ^*\\
- & \geq \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P)^2\smallskip\\
- & ^*\text{ car } \theta \text{est constant du point de vue fréquentiste et par linéarité de l'espérance}
+ & \geq \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P)^2\\
+ & ^*\text{ car } \theta \text{ est constant du point de vue fréquentiste et par linéarité de l'espérance}
 \end{align*}
 $\mu_P$ minimise alors l'expression ci-dessus en annulant le deuxième terme (on remarque que l'erreur en moyenne quadratique est égale à la variance, puisque l'on s'intéressent aux estimateurs sans biais). 
 
