--- a/content/lectures/03-bayesinference.Rmd
+++ b/content/lectures/03-bayesinference.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Bayesian inference"
-linktitle: "Bayesian inference"
+title: "Inférence bayésienne"
+linktitle: "Inférence bayésienne"
 date: "2020-06-11"
 read_date: "2020-06-11"
 menu:
   lectures:
-    parent: "Part I: Bayesian theory"
+    parent: "II Modélisation bayésienne"
     weight: 3
 type: docs
 bibliography: "../../static/bib/references.bib"
@@ -16,24 +16,30 @@ output:
     toc: true
 ---
 
-## Video lecture
+## Leçons video
 
 
-### Bayesian inference part 1: point estimates
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jFg7iYNFbQw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+### Inférence Bayésienne partie 1: estimateur ponctuels
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jYhctgHLs9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### Bayesian inference part 2: uncertainty
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9QU9OnpgkH4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+### Inférence Bayésienne partie 2: MAP
+<iframe width="560" height="315" src="https://www.youtube.com/embed/K8SDbqXAsb8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+### Inférence Bayésienne partie 3: espérance
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7u5KokmXOHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+### Inférence Bayésienne partie 4: incertitude
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4E7p5T4rLKM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-### Bayesian asymptotics
-<iframe width="560" height="315" src="https://www.youtube.com/embed/5b7e4IbixVM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+### Inférence Bayésienne --- asymptotique
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RdhyuOl17OM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 `r emo::ji("backhand index pointing right")` [*Seeing Theory*, Brown University](http://students.brown.edu/seeing-theory/bayesian-inference/index.html\#section3)
 
-## Slides
+## Diaporamas
 
-The **slides** for the first part of this section are displayed below, and can be downloaded [here](/slides/slidesInference.pdf).
+Le **diaporama** pour la première partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici](/slides/slidesInference.pdf).
 
 <html>
 <body>
@@ -43,7 +49,7 @@ The **slides** for the first part of this section are displayed below, and can b
 </body>
 </html>
 
-The **slides** for the second part of this section are displayed below, and can be downloaded [here](/slides/slidesUncertainty.pdf).
+Le **diaporama** pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici](/slides/slidesUncertainty.pdf).
 
 <html>
 <body>
@@ -53,7 +59,7 @@ The **slides** for the second part of this section are displayed below, and can 
 </body>
 </html>
 
-The **slides** for the third part of this section are displayed below, and can be downloaded [here](/slides/slidesAsymptotics.pdf).
+Le **diaporama** pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici](/slides/slidesAsymptotics.pdf).
 
 <html>
 <body>
