--- a/content/lectures/_index.Rmd
+++ b/content/lectures/_index.Rmd
@@ -1,35 +1,15 @@
 ---
-title: Videos, slides and lecture notes
+title: "Présentation"
+linktitle: "Organisation"
 menu:
   lectures:
-    parent: Overview
+    parent: Présentation
     weight: 1
 type: docs
 weight: 1
 ---
 
-### Presentation
+## Organisation
 
-This courses is divided into 3 parts:
-
- 1. [Baysian theory](01-introbayestheory)
- 2. [Bayesian computation](05-estimateprior)
- 3. [Bayesian applications in biomedical sciences](09-postmortemreanalysis)
-
-Each part is further divided into 3 or 4 sections, and several videos present the content of the topic in each section.
-
-### Videos & slides
-
-For each part, a slides deck is provided and split into video capsules where I present the slides. Click on the sections on the left hand side menu to access those.
-
-### Lectures notes
-
-The **lecture notes** for this course are displayed below, and can be downloaded [here](/files/IntroBayesMed20_lectureNotes.pdf). Those include further technical details (notably mathematical details) not required to follow along the class, but are being presented for the sake of completeness and for the interested reader.
-
-<html>
-<body>
-  <object data="/files/IntroBayesMed20_lectureNotes.pdf##view=fit" type="application/pdf" width="100%" height="900">
-        <embed src="/files/IntroBayesMed20_lectureNotes.pdf##view=fit" type="application/pdf"/>
-  </object>
-</body>
-</html>
+Chacun des 4 chapitres du cours est diviser en plusieurs sections, et pour chaque section, plusieurs capsules vidéos en présente le contenu. À chaque fois, le diaporama présenté est également disponible au format pdf. 
+Cliquer les différentes sous-sections afin d'accéder à leur contenu.
