--- a/content/lectures/02-bayesmodel.Rmd
+++ b/content/lectures/02-bayesmodel.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Bayesian modeling"
-linktitle: "Bayesian modeling"
-date: "2020-06-11"
-read_date: "2020-06-11"
+title: "Modélisation Bayésienne"
+linktitle: "Modélisation Bayésienne"
+date: "2020-11-30"
+class_date: "2020-12-01"
 menu:
   lectures:
-    parent: "Part I: Bayesian theory"
+    parent: "II Modélisation bayésienne"
     weight: 2
 type: docs
 bibliography: "../../static/bib/references.bib"
@@ -16,32 +16,34 @@ output:
     toc: true
 ---
 
-## Video lecture
+## Leçon vidéo
 
 
-### Bayesian modeling part 1
+### Modélisation bayésienne partie 1
 <iframe width="560" height="315" src="https://www.youtube.com/embed/8Ez-wWMohDg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### Bayesian modeling part 2
+### Modélisation bayésienne partie 2
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Wc1bCLNA4Q8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-### Bayesian modeling part 3
+### Modélisation bayésienne partie 3
 <iframe width="560" height="315" src="https://www.youtube.com/embed/c0yCMO-TwP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-### Bayesian modeling – priors
-<iframe width="560" height="315" src="https://www.youtube.com/embed/TtGldDmOHcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+### Modélisation bayésienne --- *a priori*
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SH19H_W59Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 `r emo::ji("backhand index pointing right")` [*Shelf software*](http://www.tonyohagan.co.uk/shelf/)
 
-### Bayesian modeling – going further
-<iframe width="560" height="315" src="https://www.youtube.com/embed/G50sTVCdN_8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+`r emo::ji("backhand index pointing right")` [*SHELF `r icon::fa_r_project(colour = "#0085d6")` package*](http://www.tonyohagan.co.uk/shelf/)
+
+### Modélisation bayésienne –-- extensions
+<iframe width="560" height="315" src="https://www.youtube.com/embed/p67ql6pFZF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-## Slides
+## Diaporamas
 
-The **slides** for the first part of this section are displayed below, and can be downloaded [here](/slides/slidesModel1.pdf).
+Le **diaporama** pour la première partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici](/slides/slidesModel1.pdf).
 
 <html>
 <body>
@@ -52,7 +54,7 @@ The **slides** for the first part of this section are displayed below, and can b
 </html>
 
 
-The **slides** for the second part of this section are displayed below, and can be downloaded [here](/slides/slidesModel2.pdf).
+Le **diaporama** pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici]](/slides/slidesModel2.pdf).
 
 <html>
 <body>
@@ -62,7 +64,7 @@ The **slides** for the second part of this section are displayed below, and can 
 </body>
 </html>
 
-The **slides** for the third part of this section are displayed below, and can be downloaded [here](/slides/slidesModel3.pdf).
+Le **diaporama** pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici](/slides/slidesModel3.pdf).
 
 <html>
 <body>
@@ -72,7 +74,7 @@ The **slides** for the third part of this section are displayed below, and can b
 </body>
 </html>
 
-The **slides** for the fourth part of this section are displayed below, and can be downloaded [here](/slides/slidesPriors.pdf).
+Le **diaporama** pour la quatrième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici](/slides/slidesPriors.pdf).
 
 <html>
 <body>
@@ -82,7 +84,7 @@ The **slides** for the fourth part of this section are displayed below, and can 
 </body>
 </html>
 
-The **slides** for the fifth part of this section are displayed below, and can be downloaded [here](/slides/slidesGoingFurther.pdf).
+Le **diaporama** pour la cinquième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici](/slides/slidesGoingFurther.pdf).
 
 <html>
 <body>
