--- a/content/lectures/01-introbayestheory.Rmd
+++ b/content/lectures/01-introbayestheory.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Introduction to Bayesian statistics"
-linktitle: "Introduction to Bayesian statistics"
-date: "2020-06-11"
-read_date: "2020-06-11"
+title: "Introduction"
+linktitle: "Introduction"
+date: "2020-11-30"
+read_date: "2020-11-30"
 menu:
   lectures:
-    parent: "Part I: Bayesian theory"
+    parent: "I Introduction à l'analyse bayésienne"
     weight: 1
 type: docs
 bibliography: "../../static/bib/references.bib"
